1.8.9.dev0
 * #827: When the "--json" flag is given, suppress console escape codes so as not to
   interfere with JSON output.
 * #829: Fix "--override" values containing deprecated section headers not actually overriding
   configuration options under deprecated section headers.
 * Clarify documentation about restoring a database: borgmatic does not create the database upon
   restore.

1.8.8
 * #370: For the PostgreSQL hook, pass the "PGSSLMODE" environment variable through to Borg when the
   database's configuration omits the "ssl_mode" option.
 * #818: Allow the "--repository" flag to match across multiple configuration files.
 * #820: Fix broken repository detection in the "rcreate" action with Borg 1.4. The issue did not
   occur with other versions of Borg.
 * #822: Fix broken escaping logic in the PostgreSQL hook's "pg_dump_command" option.
 * SECURITY: Prevent additional shell injection attacks within the PostgreSQL hook.

1.8.7
 * #736: Store included configuration files within each backup archive in support of the "config
   bootstrap" action. Previously, only top-level configuration files were stored.
 * #798: Elevate specific Borg warnings to errors or squash errors to
 * warnings. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/customize-warnings-and-errors/
 * #810: SECURITY: Prevent shell injection attacks within the PostgreSQL hook, the MongoDB hook, the
   SQLite hook, the "borgmatic borg" action, and command hook variable/constant interpolation.
 * #814: Fix a traceback when providing an invalid "--override" value for a list option.

1.8.6
 * #767: Add an "--ssh-command" flag to the "config bootstrap" action for setting a custom SSH
   command, as no configuration is available (including the "ssh_command" option) until
   bootstrapping completes.
 * #794: Fix a traceback when the "repositories" option contains both strings and key/value pairs.