@@ -974,18 +974,16 @@ properties:
                 mariadb_dump_command:
                     type: string
                     description: |
-                        Command to use instead of "mariadb-dump". This can 
-                        be used to run a specific mariadb_dump version 
-                        (e.g., one inside a running container). 
-                        Defaults to "mariadb-dump".
+                        Command to use instead of "mariadb-dump". This can be
+                        used to run a specific mariadb_dump version (e.g., one
+                        inside a running container). Defaults to "mariadb-dump".
                     example: docker exec mariadb_container mariadb-dump
                 mariadb_command:
                     type: string
                     description: |
-                        Command to run instead of "mariadb". This
-                        can be used to run a specific mariadb
-                        version (e.g., one inside a running container). 
-                        Defaults to "mariadb".
+                        Command to run instead of "mariadb". This can be used to
+                        run a specific mariadb version (e.g., one inside a
+                        running container). Defaults to "mariadb".
                     example: docker exec mariadb_container mariadb           
                 restore_password:
                     type: string
@@ -1107,16 +1105,15 @@ properties:
                     type: string
                     description: |
                         Command to use instead of "mysqldump". This can be used
-                        to run a specific mysql_dump version (e.g., one inside 
-                        a running container). Defaults to "mysqldump".
+                        to run a specific mysql_dump version (e.g., one inside a
+                        running container). Defaults to "mysqldump".
                     example: docker exec mysql_container mysqldump
                 mysql_command:
                     type: string
                     description: |
-                        Command to run instead of "mysql". This
-                        can be used to run a specific mysql
-                        version (e.g., one inside a running container). 
-                        Defaults to "mysql".
+                        Command to run instead of "mysql". This can be used to
+                        run a specific mysql version (e.g., one inside a running
+                        container). Defaults to "mysql".
                     example: docker exec mysql_container mysql
                 format:
                     type: string
